--- a/AUTHORS
+++ b/AUTHORS
@@ -1,11 +1,15 @@
 The AUTHORS file lists all contributors to this SHELL project.
-We have collaborated in a benevolent way, according to the skills and availability of each one.
-We thank each other for the trust we have placed in each other :)
+We have collaborated in a benevolent way, according to the skills of each one.
+We thank each other for the trust we have placed in each other as well as the support of our peers :)
 
 ------------------------------------------------------
+
 Thanks to:
 
-- Dan <scorpion00100> <5625@holbertonstudents.com>
+BACK-END :
 - Valentin <VAAL34> <5619@holbertonstudents.com>
+
+FRONT-END :
 - Amandine <Amandine4731> <5618@holbertonstudents.com>
+
 ------------------------------------------------------
