--- a/AUTHORS
+++ b/AUTHORS
@@ -6,10 +6,8 @@ We thank each other for the trust we have placed in each other as well as the su
 
 Thanks to:
 
-BACK-END :
+- Dan Bethel <scorpion00100> <5625@holbertonstudents.com>
 - Valentin <VAAL34> <5619@holbertonstudents.com>
-
-FRONT-END :
 - Amandine <Amandine4731> <5618@holbertonstudents.com>
 
 ------------------------------------------------------
